--- a/gallery.html
+++ b/gallery.html
@@ -65,6 +65,16 @@
     </div>
 
     <footer id="footer">
+        <div class="social-media">
+            <p>Follow Us:</p>
+            <a href="https://www.instagram.com/leclat_beauty.makeup" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://wa.me/+6281252106352?text=Hi Admin! Saya ingin memesan jasa l'Eclatbeauty" target="_blank">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <p>Contact us for more information about our services, or follow us on social media for the latest updates and inspiration.</p>
+        </div>
         <p>&copy; 2024- L'Eclat beauty. All Rights Reserved.</p>
     </footer>
 </body>
