--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <span> L'Eclat beauty</span>
         </div>
         <nav>
+            <p>menu</p>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -32,29 +33,23 @@
     
 
     <section id="home" class="centered-section">
-        <div class="nav-img">
+        <div class="text-content">
+            <h2>Welcome to L'Eclat beauty</h2>
             <img src="img/L'Eclat Beauty.png" alt="Makeup Wedding" class="home-image">
-            <div class="text-content">
-                <h2>Welcome to L'Eclat beauty</h2>
-                <br>
-                <h3>Ready to Glam You Up for Every Occasion</h3>
-                <p>Mengutamakan layanan dan kualitas tinggi dengan harga yang cukup bersahabat. Kami hadir untuk memastikan Anda tampil sempurna di setiap momen spesial, mulai dari acara pernikahan hingga pemotretan eksklusif.</p>
-                <div class="buttons">
-                    <a href="booking.html" class="btn">BOOK NOW</a>
-                    <a href="contact.html" class="btn">LEARN MORE</a>
-                </div>
-                <br><br>
-                <p>
-                    L'Eclat Beauty memahami bahwa setiap detail kecil dapat membuat perbedaan besar. Dengan sentuhan profesional dan kreativitas, kami siap menghadirkan penampilan yang memukau dan personal untuk setiap klien. Layanan kami mencakup riasan pernikahan, acara formal, hingga layanan kecantikan pribadi yang disesuaikan dengan kebutuhan Anda.
-                </p>
-                <br><br>
-                <p>
-                    Tidak hanya fokus pada tampilan luar, kami juga memberikan pengalaman yang menyenangkan dan memuaskan bagi setiap pelanggan. Tim kami yang ramah dan berdedikasi selalu siap mendengarkan keinginan Anda, karena kami percaya bahwa setiap orang layak mendapatkan perhatian terbaik untuk tampil sempurna.
-                </p>
-                <br><br>
-                <p>
-                    Jelajahi layanan kami, lihat portofolio lengkap di galeri, dan jangan ragu untuk menghubungi kami untuk informasi lebih lanjut. Di L'Eclat Beauty, kami siap membantu Anda bersinar di setiap kesempatan.
-                </p>
+            <h3>Ready to Glam You Up for Every Occasion</h3>
+            <p>Mengutamakan layanan dan kualitas tinggi dengan harga yang cukup bersahabat. Kami hadir untuk memastikan Anda tampil sempurna di setiap momen spesial, mulai dari acara pernikahan hingga pemotretan eksklusif.</p>
+            <p>
+                L'Eclat Beauty memahami bahwa setiap detail kecil dapat membuat perbedaan besar. Dengan sentuhan profesional dan kreativitas, kami siap menghadirkan penampilan yang memukau dan personal untuk setiap klien. Layanan kami mencakup riasan pernikahan, acara formal, hingga layanan kecantikan pribadi yang disesuaikan dengan kebutuhan Anda.
+            </p>
+            <p>
+                Tidak hanya fokus pada tampilan luar, kami juga memberikan pengalaman yang menyenangkan dan memuaskan bagi setiap pelanggan. Tim kami yang ramah dan berdedikasi selalu siap mendengarkan keinginan Anda, karena kami percaya bahwa setiap orang layak mendapatkan perhatian terbaik untuk tampil sempurna.
+            </p>
+            <p>
+                Jelajahi layanan kami, lihat portofolio lengkap di galeri, dan jangan ragu untuk menghubungi kami untuk informasi lebih lanjut. Di L'Eclat Beauty, kami siap membantu Anda bersinar di setiap kesempatan.
+            </p>
+            <div class="buttons">
+                <a href="booking.html" class="btn">BOOK NOW</a>
+                <a href="contact.html" class="btn">LEARN MORE</a>
             </div>
         </div>
     </section>
@@ -62,6 +57,16 @@
     
 
     <footer id="footer">
+        <div class="social-media">
+            <p>Follow Us:</p>
+            <a href="https://www.instagram.com/leclat_beauty.makeup" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://wa.me/+6281252106352?text=Hi Admin! Saya ingin memesan jasa l'Eclatbeauty" target="_blank">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <p>Contact us for more information about our services, or follow us on social media for the latest updates and inspiration.</p>
+        </div>
         <p>&copy; 2024- L'Eclat beauty. All Rights Reserved.</p>
     </footer>
 </body>
