--- a/index.html
+++ b/index.html
@@ -69,5 +69,10 @@
         </div>
         <p>&copy; 2024- L'Eclat beauty. All Rights Reserved.</p>
     </footer>
+
+    <a href="https://wa.me/+6281252106352?text=Hi%20Admin!%20Saya%20ingin%20memesan%20jasa%20L'Eclat%20beauty" target="_blank" class="whatsapp-float">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    
 </body>
 </html>
