--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
         </p>
         <br>
         <p>
-            Di bawah ini adalah beberapa contoh hasil karya terbaik kami. Klik gambar untuk melihat lebih dekat!
+            Di bawah ini adalah beberapa contoh hasil karya terbaik kami. <b>Klik gambar untuk melihat lebih dekat!</b>
         </p>
         <br>
         
@@ -77,5 +77,9 @@
         </div>
         <p>&copy; 2024- L'Eclat beauty. All Rights Reserved.</p>
     </footer>
+
+    <a href="https://wa.me/+6281252106352?text=Hi%20Admin!%20Saya%20ingin%20memesan%20jasa%20L'Eclat%20beauty" target="_blank" class="whatsapp-float">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </body>
 </html>
